# Equigraph

./: Cargo.toml  README.md  example.gql
src/: main.rs  schema.rs
src/associates/: README.md  mod.rs
src/fields/: mod.rs
src/fields/associate/: mod.rs
src/fields/current_account/: mod.rs
src/fields/insight_data/: mod.rs  utils.rs
src/fields/insight_data/changes/: mod.rs  utils.rs
src/fields/insight_data/traits/: mod.rs
src/fields/matched_address/: mod.rs  test.rs
src/fields/matched_address/mod.rs/: mod.rs
src/fields/payment_history/: mod.rs  utils.rs
src/fields/payment_history/changes/: mod.rs  utils.rs
src/fields/score/: mod.rs
src/insights/: mod.rs
src/mocks/: mod.rs
src/objects/: input.rs  output.rs
src/parser/: fields.rs  mod.rs  types.rs  utils.rs
src/queries/: mod.rs
src/queries/associate/: README.md  mod.rs  types.rs
src/queries/associates/: README.md  fields.rs  mod.rs  types.rs
src/queries/associates/associate/: mod.rs
src/queries/associates/associates/: mod.rs
src/queries/associates/insights/: mod.rs
src/queries/credit_cards/: README.md  mod.rs
src/queries/current_account/: README.md  mod.rs  types.rs  utils.rs
src/queries/current_accounts/: README.md  fields.rs  mod.rs  utils.rs
src/queries/reports/: mod.rs
src/queries/score/: README.md  fields.rs  mod.rs  types.rs  utils.rs
src/queries/scores/: README.md  mod.rs
src/queries/secured_loans/: README.md  mod.rs
src/queries/unsecured_loans/: README.md  mod.rs
src/schema/: mod.rs
src/score/: README.md  mod.rs
src/utils/: mod.rs
(+38 files in other folders)
