[package]
name = "equigraph"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-lab = "0.19.1"
chrono = "0.4.31"
insta = { version = "1.33.0", features = ["yaml"] }
itertools = "0.11.0"
juniper = "0.15.10"
juniper-compose = "0.0.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
